# datadog-smartd

.github/workflows/: release.yml  test.yml
smartd/: CHANGELOG.md  LICENSE  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml
smartd/assets/: service_checks.json
smartd/assets/configuration/: spec.yaml
smartd/assets/dashboards/: smartd_overview.json
smartd/datadog_checks/smartd/: __init__.py  check.py
smartd/datadog_checks/smartd/data/: conf.yaml.example
smartd/tests/: common.py  conftest.py  test_smartd.py
smartd/tests/fixtures/: smartd.ACME_DISK4000-SN123456789ABC.ata.state  smartd.ACME_DISK4000-SN987654321XYZ.ata.state
