[build-system]
requires = ["hatchling>=0.11.2"]
build-backend = "hatchling.build"

[project]
name = "datadog-smartd"
description = "The smartd check"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["datadog", "datadog agent", "datadog check", "smartd", "smart"]
authors = [{ name = "Community" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = ["datadog-checks-base>=37.33.0"]
dynamic = ["version"]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/smartd/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["/datadog_checks", "/tests", "/manifest.json"]

[tool.hatch.build.targets.wheel]
include = ["/datadog_checks/smartd"]
dev-mode-dirs = ["."]
